Tests/Conformance/Generated/Builtin/Constant/List/UnitList.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.List.UnitList

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_list_unitList "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/list/unitList/unitList.uplc"

end Tests.Conformance.Generated.Builtin.Constant.List.UnitList
